--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,10 @@
         <servlet-class>lk.spark.pasan.controllers.PatientController</servlet-class>
     </servlet>
     <servlet>
+        <servlet-name>MohController</servlet-name>
+        <servlet-class>lk.spark.pasan.controllers.MohController</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>HospitalController</servlet-name>
         <servlet-class>lk.spark.pasan.controllers.HospitalController</servlet-class>
     </servlet>
@@ -24,6 +28,10 @@
     <servlet-mapping>
         <servlet-name>PatientController</servlet-name>
         <url-pattern>/patient/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MohController</servlet-name>
+        <url-pattern>/moh/*</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>HospitalController</servlet-name>
