--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,19 @@
         <junit.version>5.6.2</junit.version>
     </properties>
 
+    <build>
+        <finalName>spark-ncms-pasan</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <webXml>src\main\webapp\WEB-INF\web.xml</webXml>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
